<resources>
    <string name="app_name">My_Health</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="personal_details">Personal Details</string>
    <string name="age">Age</string>
    <string name="profession">Profession</string>
    <string name="family_background">Family Background</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="father_s_email">Father\'s Email</string>
    <string name="mother_s_email">Mother\'s Email</string>
    <string name="father_s_phone_number">Father\'s Phone Number</string>
    <string name="mother_s_phone_number">Mother\'s Phone Number</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="city_village">City/Village</string>
    <string name="post_office">Post Office</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin_code">Pin Code</string>
    <string name="name">Name</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="guardian_phone_number">Guardian Phone Number</string>
    <string name="guardian_email">Guardian Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="loginWithGoogle">"LOGIN WITH GOOGLE "</string>
    <string name="newUserInfo">IF YOU ARE A NEW USER CLICK</string>
    <string name="welcome_user">Welcome User!!</string>
    <string name="email_verification_status">Email Verification Status</string>
    <string name="default_web_client_id">1019868508133-lprrk36f7s7gqhtigia6fafc8lc0nren.apps.googleusercontent.com</string>

</resources>