<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:elevation="100dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:elevation="100dp"
            android:indeterminate="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:strokeColor="@color/black"
                app:strokeWidth="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Emailil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/TextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="12dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Passwordil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/TextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="12dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonLogin"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/login"
                        app:cornerRadius="5dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonLoginWithGoogle"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/loginWithGoogle"
                        app:cornerRadius="5dp"
                        app:icon="@drawable/img"
                        app:iconSize="40dp"
                        app:iconTint="@null" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newUserInfo" />

                        <TextView
                            android:id="@+id/buttonRegister"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:layout_marginStart="4dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/register"
                            android:textColor="@color/purple_700" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
